# gmod-rtx-binary

./: .gitignore  .gitmodules  create_project_windows_vs2022.bat  premake5.lua  symlink_maker.bat
addon/lua/autorun/: cl_rtx.lua  cl_rtx_eyes.lua  cl_rtx_force_render.lua  cl_rtx_fuck_occlusionproxy.lua  cl_rtx_material_fixer.lua  cl_rtx_meshed_world_renderer.lua  cl_rtx_optimize_viewfrustrum.lua  cl_rtx_optimize_viewfrustrum_lite.lua  cl_rtx_remove_viewfrustrum.lua  cl_rtx_stable_prop_hashes.lua  cl_suppress_material_errors.lua  rtxfixes_init.lua
addon/lua/autorun/client/: cl_displacement_renderer.lua  cl_map_bounds_visuallizer.lua  cl_material_inspector.lua  (+10 more)
addon/lua/entities/: base_rtx_light.lua  cl_init.lua  init.lua  rtx_lightupdater.lua  rtx_lightupdatermanager.lua  rtx_mattest.lua  rtx_physics.lua  shared.lua
addon/lua/rtx_light/: queue_system.lua
addon/lua/tmc/: init.lua
public/include/remix/: remix.h  remix_c.h
source/: e_utils.cpp  e_utils.h  module.cpp  prop_fixes.cpp  prop_fixes.h
source/entity_manager/: entity_manager.cpp  entity_manager.hpp
source/interfaces/: gm_interfaces.cpp  gm_interfaces.h
source/launcher/: CMakeLists.txt  app.manifest  main.cpp
source/math/: math.cpp  math.hpp
source/mwr/: mwr.cpp  mwr.hpp
source/rtx_device/: rtx_device.cpp  rtx_device.h
source/rtx_light_manager/: rtx_light_manager.cpp  rtx_light_manager.hpp
source/rtx_lights/: rtx_light_manager.cpp  rtx_light_manager.h
source/shader_fixes/: shader_hooks.cpp  shader_hooks.h
source/spatial_partitioning/: spatial_partitioning.cpp  spatial_partitioning.hpp
(+5 files in other folders)
